--- a/src/components/ui/scrollArea/scrollArea.module.scss
+++ b/src/components/ui/scrollArea/scrollArea.module.scss
@@ -20,10 +20,6 @@
 
     transition: background 160ms ease-out;
 
-    &:hover {
-      background: var(--color-dark-700);
-    }
-
     &[data-orientation='vertical'] {
       width: 8px;
     }
@@ -54,9 +50,7 @@
       }
 
       &:active {
-        box-shadow:
-          0 4px 12px var(--color-accent-900),
-          0 -4px 12px var(--color-accent-900);
+        background: var(--color-dark-300);
       }
     }
   }
